--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "vue": "^3.2.37"
+    "sass": "1.55.0",
+    "vue": "3.2.40",
+    "vue-router": "4"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^3.1.0",
-    "typescript": "^4.6.4",
-    "vite": "^3.1.0",
-    "vue-tsc": "^0.40.4"
+    "@vitejs/plugin-vue": "3.1.2",
+    "@vitejs/plugin-vue-jsx": "2.0.1",
+    "typescript": "4.8.4",
+    "vite": "3.1.7",
+    "vue-tsc": "0.40.13"
   }
 }
