--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "sass": "1.55.0",
+    "vant": "3.6.4",
     "vue": "3.2.40",
     "vue-router": "4"
   },
@@ -17,6 +18,7 @@
     "@vitejs/plugin-vue": "3.1.2",
     "@vitejs/plugin-vue-jsx": "2.0.1",
     "typescript": "4.8.4",
+    "unplugin-vue-components": "0.22.8",
     "vite": "3.1.7",
     "vue-tsc": "0.40.13"
   }
