--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "1.1.3",
     "sass": "1.55.0",
     "vant": "3.6.4",
     "vue": "3.2.40",
