--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "1.1.3",
+    "echarts": "5.4.0",
     "pinia": "2.0.23",
     "sass": "1.55.0",
     "vant": "3.6.4",
