--- a/.gitignore
+++ b/.gitignore
@@ -6,11 +6,13 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.history
+.vscode
 node_modules
 dist
 dist-ssr
 *.local
+bin
 
 # Editor directories and files
 .vscode/*
